# difference-generator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: make_check.yml
gendiff/: __init__.py  cli.py  description.py  diff_generator.py  flat_diff.py  flat_formatter.py  formatter.py  inner_mapping.py  inner_view.py  nested_formatter.py  parser.py  plain_formatter.py  stylish.py  tree.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_gendiff.py  test_plain.py  test_stylish.py
tests/fixtures/: expected.py  nested.txt  nested_file1.json  nested_file1.yml  plain.txt  plane_style.txt
