[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Generate difference between two files"
authors = ["Denis Aminov <Denisaminov74@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.2"
pytest-cov = "^2.11.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
